--- a/day1/选择器到important.html
+++ b/day1/选择器到important.html
@@ -5,6 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day01 选择器-权重important</title>
+    <!-- 
+
+        一个完整的标签，分为以下几个部分
+
+        起始标签
+
+        属性
+
+        属性值
+
+        内容
+
+        闭合标签
+
+        每一个标签包含
+
+        起始字符
+
+        标签名
+
+        闭合字符
+
+     -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- 
 
@@ -28,6 +51,10 @@
             width: 100px;
             height: 100px;
             background-color: aqua;
+        }
+        #id1{
+            width: 300px !important;
+            height: 300px !important;
         }
      </style>
 </head>
@@ -193,6 +220,17 @@
 
       <div class="flex">弹性盒模型</div>
 
-    
+      <div class="class1" id="id1" style="width: 150px;height: 150px;">
+
+      </div>
+
+
+      <div class="dom3" aab></div>
+
+    <p textCenter>
+        积分可兑换艰苦奋斗和口感哈多看哈尖酸刻薄飞鸿就啊的身份卡的部分就可达数百家啊都是白富美的风景可视电话就回家
+    </p>
+
+    <div class="boxCenter"></div>
 </body>
 </html>
